--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import Ava from '@src/assets/img/ava.jpg';
+import Ava from '@src/assets/img/Profile.jpeg';
 
 type PicSize = 'sm' | 'md' | 'lg';
 interface Props {
@@ -11,7 +11,7 @@ const { picSize } = Astro.props;
 
 <div class='flex gap-4 items-center leading-tight not-prose'>
 	<a
-		href='https://github.com/syakirurahman'
+		href='https://github.com/dandankarai'
 		target='_blank'
 		rel='noopener noreferrer'
 		class:list={[
@@ -26,14 +26,14 @@ const { picSize } = Astro.props;
 	<div>
 		<div>
 			<a
-				href='https://github.com/syakirurahman'
+				href='https://github.com/dandankarai'
 				class='block font-bold text-inherit hover:text-[var(--link-color)]'
 				target='_blank'
 				rel='noopener noreferrer'
 			>
-				Muhammad Syakirurohman
+				Daniel Cunha
 			</a>
 		</div>
-		<small class='avatar__subtitle'>Frontend Engineer</small>
+		<small class='avatar__subtitle'>FullStack Developer</small>
 	</div>
 </div>
