--- a/src/components/widgets/AboutTheAuthor.astro
+++ b/src/components/widgets/AboutTheAuthor.astro
@@ -9,12 +9,12 @@ import Author from '../Author.astro';
 	<Author picSize='md' />
 	<div class='author-desc text-[.825rem] my-4'>
 		<p class='mb-3'>
-			Syakir (Sha·keer) is a Front-end Engineer with experiences building SaaS and enterprise level products. He is actively writing on{
-				' '
-			}
-			<a href='https://devaradise.com' target='_blank' class="underline">Devaradise.com</a>
+			FullStack developer, experience in frameworks like React, NextJs, React Native, NestJs, Express and Fastify. And aspiring in ruby
+				
+			
+			
 		</p>
-		<p>He will be happy to work and collaborate in any project as a Front-end engineer. His main stacks are React and Vue 3.</p>
+		<p>He will be happy to work and collaborate in any project as a Frontend Developer.</p>
 	</div>
 </div>
 
