--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,12 @@ import { getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
-import Ava from '@src/assets/img/ava.jpg';
+import Ava from '@src/assets/img/Profile.jpeg';
 import Prose from '../components/Prose.astro';
 import { projects } from './projects/projects';
 import ProjectList from '../components/ProjectList.astro'
 import PostItem from '../components/PostItem.astro';
+import { myResume } from '@src/constants/myResume';
 
 type BlogPost = CollectionEntry<'blog'>;
 
@@ -20,11 +21,16 @@ const posts = (await getCollection('blog')).sort((a: BlogPost, b: BlogPost) => b
 	<div class='container'>
 		<div class='w-full md:flex md:items-center gap-16 mb-10'>
       <div class="text-pretty leading-9">
-        <h1 class="text-4xl font-bold mb-4">Hi There 👋, Syakir Here! </h1>
+        <h1 class="text-4xl font-bold mb-4">Hi There 👋, Daniel Cunha! </h1>
         <Prose>
           <div class="text-lg">
-            <p>I am a Front-end Engineer from Indonesia. I love sharing what i know on <a href="https://devaradise.com" target="_blank">devaradise.com</a>, and sometime i also share freebies like this. I'm also active on <a href="https://dev.to/syakirurahman" target="_blank">dev.to</a> and <a href="https://x.com/syakirurahman" target="_blank">twitter</a>.</p>
-            <p>I made Devolio to help you easily set up your own blog and portfolio website. It's a static site built with Astro and Tailwind CSS, and you can deploy it on platforms like <a href="https://app.netlify.com/start/deploy?repository=https://github.com/devaradise/devolio" target="_blank" rel="nofollow noopener">Netlify</a>, <a href="https://vercel.com/new/clone?repository-url=https%3A%2F%2Fgithub.com%2Fdevaradise%2Fdevolio" target="_blank" rel="nofollow noopener">Vercel</a>, or <a href="https://pages.cloudflare.com/" target="_blank" rel="nofollow noopener">Cloudflare Pages</a>.</p>  
+            <p>
+              FullStack Developer with solid experience in front-end development. My passion is creating innovative and scalable solutions using modern technologies. I am proficient in JavaScript, TypeScript, Node.js, React and React Native, which allows me to develop high-performance web and mobile applications and interactive interfaces With knowledge of Scrum and agile methodologies, I am a fan of team collaboration and continuous deliveries.
+            </p>
+
+            <p>
+              I am proficient in JavaScript, TypeScript, Node.js, React and React Native, which allows me to develop high-performance web and mobile applications and interactive interfaces With knowledge of Scrum and agile methodologies, I am a fan of team collaboration and continuous deliveries.
+            </p>
           </div>
         </Prose>
       </div>
@@ -46,13 +52,13 @@ const posts = (await getCollection('blog')).sort((a: BlogPost, b: BlogPost) => b
         <div class="text-right">
         </div>
       </div>
-      <div>
+      <!-- <div>
         <div class="flex justify-between gap-2 mb-1">
           <h2 class="text-lg font-bold mb-3">My Projects</h2>
           <a href="/projects/" class="inline-block py-2 underline dark:prose-invert">All projects &raquo;</a>
         </div>
         <ProjectList projects={top6Projects}/>
-      </div>
+      </div> -->
 		</main>
 	</div>
 </BaseLayout>
